--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/news_nav_graph.xml"
-    app:startDestination="@id/profileFragment">
+    app:startDestination="@id/loginFragment">
 
     <fragment
         android:id="@+id/profileFragment"
@@ -12,4 +12,19 @@
         android:id="@+id/vaccineFragment"
         android:name="com.example.studenthealthcare.ui.screens.VaccineFragment"
         android:label="VaccineFragment" />
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.example.studenthealthcare.ui.screens.LoginFragment"
+        android:label="LoginFragment" >
+        <action
+            android:id="@+id/action_loginFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/registerFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.example.studenthealthcare.ui.screens.RegisterFragment"
+        android:label="RegisterFragment" />
 </navigation>
