--- a/app/src/main/res/layout/register_layout.xml
+++ b/app/src/main/res/layout/register_layout.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="25dp"
         android:text="Register Profile"
         android:textSize="45sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -103,11 +103,11 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextText5" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/registerButton"
         android:layout_width="177dp"
         android:layout_height="64dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="22dp"
         android:text="Register"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextText6" />
@@ -116,9 +116,9 @@
         android:id="@+id/buttonCancel"
         android:layout_width="177dp"
         android:layout_height="64dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="22dp"
         android:text="Cancel"
         android:layout_marginLeft="10dp"
-        app:layout_constraintStart_toEndOf="@+id/button"
+        app:layout_constraintStart_toEndOf="@+id/registerButton"
         app:layout_constraintTop_toBottomOf="@+id/editTextText6" />
 </androidx.constraintlayout.widget.ConstraintLayout>
